Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,19 +1,19 @@
 @book{guermond2021finite,
-  title =        {Finite Elements I: Approximation and Interpolation},
+  title =        {{Finite Elements I: Approximation and Interpolation}},
   author =       {Guermond, Jean-Luc and Ern, Alexandre},
   year =         2021,
   publisher =    {Springer}
 }
 
 @book{rudin1970real,
-  title =        {Real and Complex Analysis P. 2},
+  title =        {{Real and Complex Analysis P. 2}},
   author =       {Rudin, Walter},
   year =         1970,
   publisher =    {McGraw-Hill}
 }
 
 @book{rudin1976principles,
-  title =        {Principles of mathematical analysis},
+  title =        {{Principles of mathematical analysis}},
   author =       {Rudin, Walter and others},
   volume =       3,
   year =         1976,
@@ -28,7 +28,7 @@
 }
 
 @book{girault1979finite,
-  title =        {Finite element approximation of the Navier-Stokes equations},
+  title =        {{Finite element approximation of the Navier-Stokes equations}},
   author =       {Girault, Vivette and Raviart, Pierre-Arnaud},
   volume =       749,
   year =         1979,
@@ -36,8 +36,7 @@
 }
 
 @book{brezis2011functional,
-  title =        {Functional analysis, Sobolev spaces and partial differential
-                  equations},
+  title =        {{Functional analysis, Sobolev spaces and partial differential equations}},
   author =       {Brezis, Haim and Br{\'e}zis, Haim},
   volume =       2,
   number =       3,
@@ -46,7 +45,7 @@
 }
 
 @book{di2011mathematical,
-  title =        {Mathematical aspects of discontinuous Galerkin methods},
+  title =        {{Mathematical aspects of discontinuous Galerkin methods}},
   author =       {Di Pietro, Daniele Antonio and Ern, Alexandre},
   volume =       69,
   year =         2011,
@@ -54,8 +53,7 @@
 }
 
 @inproceedings{dangel2020modular,
-  title =        {Modular Block-diagonal Curvature Approximations for
-                  Feedforward Architectures},
+  title = {{Modular Block-diagonal Curvature Approximations for Feedforward Architectures}},
   author =       {Dangel, Felix and Harmeling, Stefan and Hennig, Philipp},
   booktitle =    {International Conference on Artificial Intelligence and
                   Statistics (AISTATS)},
@@ -63,24 +61,21 @@
 }
 
 @inproceedings{martens2015optimizing,
-  title =        {Optimizing Neural Networks with {K}ronecker-factored
-                  Approximate Curvature},
+  title =        {{Optimizing Neural Networks with {K}ronecker-factored Approximate Curvature}},
   author =       {Martens, James and Grosse, Roger},
   booktitle =    {International Conference on Machine Learning (ICML)},
   year =         2015,
 }
 
 @article{skorski2019chain,
-  title =        {Chain rules for hessian and higher derivatives made easy by
-                  tensor calculus},
+  title =        {{Chain rules for hessian and higher derivatives made easy by tensor calculus}},
   author =       {Skorski, Maciej},
   journal =      {arXiv preprint arXiv:1911.13292},
   year =         2019
 }
 
 @inproceedings{martens2018kroneckerfactored,
-  title =        {{Kronecker-factored Curvature Approximations for Recurrent
-                  Neural Networks}},
+  title =        {{Kronecker-factored Curvature Approximations for Recurrent Neural Networks}},
   author =       {James Martens and Jimmy Ba and Matt Johnson},
   booktitle =    {International Conference on Learning Representations},
   year =         2018,
@@ -88,8 +83,7 @@
 }
 
 @inproceedings{eschenhagen2023kroneckerfactored,
-  title =        {Kronecker-Factored Approximate Curvature for Modern Neural
-                  Network Architectures},
+  title = {{Kronecker-Factored Approximate Curvature for Modern Neural Network Architectures}},
   author =       {Runa Eschenhagen and Alexander Immer and Richard E. Turner and
                   Frank Schneider and Philipp Hennig},
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS)},
@@ -108,8 +102,7 @@
 }
 
 @inproceedings{arora2018understanding,
-  title =        {Understanding Deep Neural Networks with Rectified Linear
-                  Units},
+  title =        {{Understanding Deep Neural Networks with Rectified Linear Units}},
   author =       {Raman Arora and Amitabh Basu and Poorya Mianjy and Anirbit
                   Mukherjee},
   booktitle =    {International Conference on Learning Representations (ICLR)},
@@ -118,8 +111,7 @@
 
 @inproceedings{grosse2016kroneckerfactored,
   author =       {Grosse, Roger and Martens, James},
-  title =        {A Kronecker-Factored Approximate {F}isher Matrix for
-                  Convolution Layers},
+  title =        {{A Kronecker-Factored Approximate {F}isher Matrix for Convolution Layers}},
   year =         2016,
   booktitle =    {International Conference on Machine Learning (ICML)},
 }
@@ -131,8 +123,7 @@
 }
 
 @inproceedings{muller2023achieving,
-  title =        {Achieving high accuracy with PINNs via energy natural gradient
-                  descent},
+  title =        {{Achieving high accuracy with PINNs via energy natural gradient descent}},
   author =       {M{\"u}ller, Johannes and Zeinhofer, Marius},
   booktitle =    {International Conference on Machine Learning},
   pages =        {25471--25485},
@@ -141,8 +132,7 @@
 }
 
 @article{dissanayake1994neural,
-  title =        {Neural-network-based approximations for solving partial
-                  differential equations},
+  title =        {Neural-network-based approximations for solving partial differential equations},
   author =       {Dissanayake, MWMG and Phan-Thien, Nhan},
   journal =      {communications in Numerical Methods in Engineering},
   volume =       10,
@@ -153,8 +143,7 @@
 }
 
 @article{lagaris1998artificial,
-  title =        {Artificial neural networks for solving ordinary and partial
-                  differential equations},
+  title =        {Artificial neural networks for solving ordinary and partial differential equations},
   author =       {Lagaris, Isaac E and Likas, Aristidis and Fotiadis, Dimitrios
                   I},
   journal =      {IEEE transactions on neural networks},
@@ -166,9 +155,7 @@
 }
 
 @article{raissi2019physics,
-  title =        {Physics-informed neural networks: A deep learning framework
-                  for solving forward and inverse problems involving nonlinear
-                  partial differential equations},
+  title =        {Physics-informed neural networks: A deep learning framework for solving forward and inverse problems involving nonlinear partial differential equations},
   author =       {Raissi, Maziar and Perdikaris, Paris and Karniadakis, George
                   E},
   journal =      {Journal of Computational physics},
@@ -179,8 +166,7 @@
 }
 
 @article{sirignano2018dgm,
-  title =        {DGM: A deep learning algorithm for solving partial
-                  differential equations},
+  title =        {DGM: A deep learning algorithm for solving partial differential equations},
   author =       {Sirignano, Justin and Spiliopoulos, Konstantinos},
   journal =      {Journal of computational physics},
   volume =       375,
@@ -198,8 +184,7 @@
 }
 
 @article{de2023operator,
-  title =        {An operator preconditioning perspective on training in
-                  physics-informed machine learning},
+  title =        {An operator preconditioning perspective on training in physics-informed machine learning},
   author =       {De Ryck, Tim and Bonnet, Florent and Mishra, Siddhartha and de
                   B{\'e}zenac, Emmanuel},
   journal =      {arXiv preprint arXiv:2310.05801},
@@ -215,8 +200,7 @@
 }
 
 @article{markidis2021old,
-  title =        {The old and the new: Can physics-informed deep-learning
-                  replace traditional linear solvers?},
+  title =        {The old and the new: Can physics-informed deep-learning replace traditional linear solvers?},
   author =       {Markidis, Stefano},
   journal =      {Frontiers in big Data},
   volume =       4,
@@ -226,7 +210,7 @@
 }
 
 @article{lu2021deepxde,
-  title =        {DeepXDE: A deep learning library for solving differential
+  title =        {{DeepXDE}: A deep learning library for solving differential
                   equations},
   author =       {Lu, Lu and Meng, Xuhui and Mao, Zhiping and Karniadakis,
                   George Em},
@@ -239,8 +223,7 @@
 }
 
 @article{nabian2021efficient,
-  title =        {Efficient training of physics-informed neural networks via
-                  importance sampling},
+  title =        {Efficient training of physics-informed neural networks via importance sampling},
   author =       {Nabian, Mohammad Amin and Gladstone, Rini Jasmine and Meidani,
                   Hadi},
   journal =      {Computer-Aided Civil and Infrastructure Engineering},
@@ -252,8 +235,7 @@
 }
 
 @article{daw2022rethinking,
-  title =        {Rethinking the importance of sampling in physics-informed
-                  neural networks},
+  title =        {Rethinking the importance of sampling in physics-informed neural networks},
   author =       {Daw, Arka and Bu, Jie and Wang, Sifan and Perdikaris, Paris
                   and Karpatne, Anuj},
   journal =      {arXiv preprint arXiv:2207.02338},
@@ -261,8 +243,7 @@
 }
 
 @article{zapf2022investigating,
-  title =        {Investigating molecular transport in the human brain from MRI
-                  with physics-informed neural networks},
+  title =        {{Investigating molecular transport in the human brain from MRI with physics-informed neural networks}},
   author =       {Zapf, Bastian and Haubner, Johannes and Kuchta, Miroslav and
                   Ringstad, Geir and Eide, Per Kristian and Mardal, Kent-Andre},
   journal =      {Scientific Reports},
@@ -274,8 +255,7 @@
 }
 
 @article{wang2021understanding,
-  title =        {Understanding and mitigating gradient flow pathologies in
-                  physics-informed neural networks},
+  title =        {Understanding and mitigating gradient flow pathologies in physics-informed neural networks},
   author =       {Wang, Sifan and Teng, Yujun and Perdikaris, Paris},
   journal =      {SIAM Journal on Scientific Computing},
   volume =       43,
@@ -286,8 +266,7 @@
 }
 
 @article{wang2022and,
-  title =        {When and why {PINNs} fail to train: A neural tangent kernel
-                  perspective},
+  title =        {When and why {PINNs} fail to train: A neural tangent kernel perspective},
   author =       {Wang, Sifan and Yu, Xinling and Perdikaris, Paris},
   journal =      {Journal of Computational Physics},
   volume =       449,
@@ -297,8 +276,7 @@
 }
 
 @article{wu2023comprehensive,
-  title =        {A comprehensive study of non-adaptive and residual-based
-                  adaptive sampling for physics-informed neural networks},
+  title =        {A comprehensive study of non-adaptive and residual-based adaptive sampling for physics-informed neural networks},
   author =       {Wu, Chenxi and Zhu, Min and Tan, Qinyang and Kartha, Yadhu and
                   Lu, Lu},
   journal =      {Computer Methods in Applied Mechanics and Engineering},
@@ -309,8 +287,7 @@
 }
 
 @article{van2022optimally,
-  title =        {Optimally weighted loss functions for solving pdes with neural
-                  networks},
+  title =        {Optimally weighted loss functions for solving {PDE}s with neural networks},
   author =       {van der Meer, Remco and Oosterlee, Cornelis W and Borovykh,
                   Anastasia},
   journal =      {Journal of Computational and Applied Mathematics},
@@ -321,16 +298,14 @@
 }
 
 @article{wang2022respecting,
-  title =        {Respecting causality is all you need for training
-                  physics-informed neural networks},
+  title =        {Respecting causality is all you need for training physics-informed neural networks},
   author =       {Wang, Sifan and Sankaran, Shyam and Perdikaris, Paris},
   journal =      {arXiv preprint arXiv:2203.07404},
   year =         2022
 }
 
 @article{li2023forward,
-  title =        {Forward Laplacian: A New Computational Framework for Neural
-                  Network-based Variational Monte Carlo},
+  title =        {{Forward Laplacian: A New Computational Framework for Neural Network-based Variational Monte Carlo}},
   author =       {Li, Ruichen and Ye, Haotian and Jiang, Du and Wen, Xuelan and
                   Wang, Chuwei and Li, Zhe and Li, Xiang and He, Di and Chen, Ji
                   and Ren, Weiluo and others},
@@ -338,8 +313,7 @@
 }
 
 @inproceedings{bettencourt2019taylor,
-  title =        {Taylor-mode automatic differentiation for higher-order
-                  derivatives in {JAX}},
+  title =        {Taylor-mode automatic differentiation for higher-order derivatives in {JAX}},
   author =       {Bettencourt, Jesse and Johnson, Matthew J and Duvenaud, David},
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS);
                   Workhop on Program Transformations for ML},
@@ -347,16 +321,14 @@
 }
 
 @book{griewank2008evaluating,
-  title =        {Evaluating derivatives: principles and techniques of
-                  algorithmic differentiation},
+  title =        {Evaluating derivatives: principles and techniques of algorithmic differentiation},
   author =       {Griewank, Andreas and Walther, Andrea},
   year =         2008,
   publisher =    {SIAM}
 }
 
 @article{griewank1996algorithm,
-  title =        {Algorithm 755: ADOL-C: A package for the automatic
-                  differentiation of algorithms written in C/C++},
+  title =        {{Algorithm 755: ADOL-C: A package for the automatic differentiation of algorithms written in C/C++}},
   author =       {Griewank, Andreas and Juedes, David and Utke, Jean},
   journal =      {ACM Transactions on Mathematical Software (TOMS)},
   volume =       22,
@@ -367,16 +339,14 @@
 }
 
 @inproceedings{benzing2022gradient,
-  title =        {Gradient Descent on Neurons and its Link to Approximate
-                  Second-order Optimization},
+  title =        {{Gradient Descent on Neurons and its Link to Approximate Second-order Optimization}},
   author =       {Benzing, Frederik},
   booktitle =    {International Conference on Machine Learning (ICML)},
   year =         2022,
 }
 
 @inproceedings{petersen2023isaac,
-  title =        {{ISAAC} Newton: Input-based Approximate Curvature for Newton's
-                  Method},
+  title =        {{{ISAAC} Newton: Input-based Approximate Curvature for Newton's Method}},
   author =       {Felix Petersen and Tobias Sutter and Christian Borgelt and
                   Dongsung Huh and Hilde Kuehne and Yuekai Sun and Oliver
                   Deussen},
@@ -385,16 +355,14 @@
 }
 
 @article{lin2023simplifying,
-  title =        {Simplifying Momentum-based Riemannian Submanifold
-                  Optimization},
+  title =        {{Simplifying Momentum-based Riemannian Submanifold Optimization}},
   author =       {Lin, Wu and Duruisseaux, Valentin and Leok, Melvin and
                   Nielsen, Frank and Khan, Mohammad Emtiyaz and Schmidt, Mark},
   year =         2023
 }
 
 @article{lin2023structured,
-  title =        {Structured Inverse-Free Natural Gradient: Memory-Efficient \&
-                  Numerically-Stable KFAC for Large Neural Nets},
+  title =        {{Structured Inverse-Free Natural Gradient: Memory-Efficient \& Numerically-Stable KFAC for Large Neural Nets}},
   author =       {Lin, Wu and Dangel, Felix and Eschenhagen, Runa and Neklyudov,
                   Kirill and Kristiadi, Agustinus and Turner, Richard E and
                   Makhzani, Alireza},
@@ -402,7 +370,7 @@
 }
 
 @inproceedings{dangel2020backpack,
-  title =        {{B}ack{PACK}: Packing more into Backprop},
+  title =        {{{B}ack{PACK}: Packing more into Backprop}},
   author =       {Felix Dangel and Frederik Kunstner and Philipp Hennig},
   booktitle =    {International Conference on Learning Representations (ICLR)},
   year =         2020,
@@ -421,8 +389,7 @@
 }
 
 @article{webber2022rayleigh,
-  title =        {Rayleigh-Gauss-Newton optimization with enhanced sampling for
-                  variational Monte Carlo},
+  title =        {{Rayleigh-Gauss-Newton optimization with enhanced sampling for variational Monte Carlo}},
   author =       {Webber, Robert J and Lindsey, Michael},
   journal =      {Physical Review Research},
   volume =       4,
@@ -433,8 +400,7 @@
 }
 
 @article{kunstner2019limitations,
-  title =        {Limitations of the empirical fisher approximation for natural
-                  gradient descent},
+  title =        {{Limitations of the empirical Fisher approximation for natural gradient descent}},
   author =       {Kunstner, Frederik and Hennig, Philipp and Balles, Lukas},
   journal =      {Advances in neural information processing systems},
   volume =       32,
@@ -453,8 +419,7 @@
 }
 
 @article{yu2018deep,
-  title =        {The deep Ritz method: a deep learning-based numerical
-                  algorithm for solving variational problems},
+  title =        {The deep Ritz method: a deep learning-based numerical algorithm for solving variational problems},
   author =       {E, Weinan and Yu, Bing},
   journal =      {Communications in Mathematics and Statistics},
   volume =       6,
@@ -466,15 +431,14 @@
 
 @article{pearlmutter1994fast,
   author =       {Pearlmutter, Barak A.},
-  title =        {Fast Exact Multiplication by the {H}essian},
+  title =        {{Fast Exact Multiplication by the {H}essian}},
   journal =      {Neural Computation},
   year =         1994,
   tags =         {hessian},
 }
 
 @article{schraudolph2002fast,
-  title =        {Fast curvature matrix-vector products for second-order
-                  gradient descent},
+  title =        {Fast curvature matrix-vector products for second-order gradient descent},
   author =       {Schraudolph, Nicol N},
   journal =      {Neural Computation},
   year =         2002,
@@ -488,7 +452,7 @@
 }
 
 @inproceedings{tatzel2022late,
-  title =        {Late-Phase Second-Order Training},
+  title =        {{Late-Phase Second-Order Training}},
   author =       {Tatzel, Lukas and Hennig, Philipp and Schneider, Frank},
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS),
                   Workshop Has it Trained Yet?},
@@ -496,8 +460,7 @@
 }
 
 @incollection{paszke2019pytorch,
-  title =        {{PyTorch}: An Imperative Style, High-Performance Deep Learning
-                  Library},
+  title =        {{{PyTorch}: An Imperative Style, High-Performance Deep Learning Library}},
   author =       {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer,
                   Adam and Bradbury, James and Chanan, Gregory and Killeen,
                   Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga,
@@ -517,14 +480,14 @@
 }
 
 @article{jnini2024gauss,
-  title={Gauss-Newton Natural Gradient Descent for Physics-Informed Computational Fluid Dynamics},
+  title={{Gauss-Newton Natural Gradient Descent for Physics-Informed Computational Fluid Dynamics}},
   author={Jnini, Anas and Vella, Flavio and Zeinhofer, Marius},
   journal={arXiv preprint arXiv:2402.10680},
   year={2024}
 }
 
 @article{pfau2020ab,
-  title={Ab initio solution of the many-electron Schr{\"o}dinger equation with deep neural networks},
+  title={Ab initio solution of the many-electron {S}chr{\"o}dinger equation with deep neural networks},
   author={Pfau, David and Spencer, James S and Matthews, Alexander GDG and Foulkes, W Matthew C},
   journal={Physical Review Research},
   volume={2},
@@ -552,7 +515,7 @@
 
 
 @article{bonfanti2024challenges,
-  title={The Challenges of the Nonlinear Regime for Physics-Informed Neural Networks},
+  title={{The Challenges of the Nonlinear Regime for Physics-Informed Neural Networks}},
   author={Bonfanti, Andrea and Bruno, Giuseppe and Cipriani, Cristina},
   journal={arXiv preprint arXiv:2402.03864},
   year={2024}
@@ -574,7 +537,7 @@
 }
 
 @article{osawa2023pipefisher,
-  title={Pipefisher: Efficient training of large language models using pipelining and fisher information matrices},
+  title={Pipefisher: Efficient training of large language models using pipelining and {F}isher information matrices},
   author={Osawa, Kazuki and Li, Shigang and Hoefler, Torsten},
   journal={Proceedings of Machine Learning and Systems},
   volume={5},
@@ -590,14 +553,14 @@
 }
 
 @article{chen2024teng,
-  title={TENG: Time-Evolving Natural Gradient for Solving PDEs with Deep Neural Net},
+  title={{TENG: Time-Evolving Natural Gradient for Solving PDEs with Deep Neural Net}},
   author={Chen, Zhuo and McCarran, Jacob and Vizcaino, Esteban and Solja{\v{c}}i{\'c}, Marin and Luo, Di},
   journal={arXiv preprint arXiv:2404.10771},
   year={2024}
 }
 
 @article{zampini2024petscml,
-  title={PETScML: Second-order solvers for training regression problems in Scientific Machine Learning},
+  title={{PETScML: Second-order solvers for training regression problems in Scientific Machine Learning}},
   author={Zampini, Stefano and Zerbinati, Umberto and Turkiyyah, George and Keyes, David},
   journal={arXiv preprint arXiv:2403.12188},
   year={2024}
@@ -605,9 +568,31 @@
 
 
 @misc{wandb,
-title = {Experiment Tracking with Weights and Biases},
+title = {{Experiment Tracking with Weights and Biases}},
 year = {2020},
 note = {Software available from wandb.ai},
 url={https://www.wandb.ai/},
 author = {Weights and Biases},
 }
+
+@article{cuomo2022scientific,
+  title={Scientific machine learning through physics--informed neural networks: Where we are and what’s next},
+  author={Cuomo, Salvatore and Di Cola, Vincenzo Schiano and Giampaolo, Fabio and Rozza, Gianluigi and Raissi, Maziar and Piccialli, Francesco},
+  journal={Journal of Scientific Computing},
+  volume={92},
+  number={3},
+  pages={88},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{bruna2024neural,
+  title={Neural Galerkin schemes with active learning for high-dimensional evolution equations},
+  author={Bruna, Joan and Peherstorfer, Benjamin and Vanden-Eijnden, Eric},
+  journal={Journal of Computational Physics},
+  volume={496},
+  pages={112588},
+  year={2024},
+  publisher={Elsevier}
+}
+
