--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -25,7 +25,7 @@
 \printcontents[sections]{l}{1}{\setcounter{tocdepth}{2}}
 \vspace{2em}
 
-\section{Experimental Details and Additional Results}
+\section{Experimental Details and Additional Results}\label{sec:experimental_details}
 \input{sections/experimental_details.tex}
 
 \section{Pseudo-Code: KFAC for the Poisson Equation}\label{app:pseudo}
