--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -54,9 +54,11 @@ However, none of this yields approximations of an accuracy comparable to the app
 Recently, there has been a trend to second-order methods in PINNs and more specifically methods that use the function space geometry to design meaningful preconditioners, see~\cite{zeng2022competitive, muller2023achieving, de2023operator, liu2024preconditioning, jnini2024gauss,chen2024teng, zampini2024petscml}, where we also refer to a unified view on these approaches given by~\cite{muller2024optimization}. 
 Whereas these methods greatly improve the accuracy of PINNs they come with a significant computational cost for every iteration as one needs to solve a linear system of the size of the parameter space of the network. 
 Hence, this is only feasible for networks of small to moderate size when done naively. 
-One approach is to use matrix-free methods to approximately compute Gauß-Newton update directions by introducing an inner optimization loop that, see~\cite{schraudolph2002fast,martens2010deep} for supervised learning problems and~\cite{zeng2022competitive,bonfanti2024challenges, jnini2024gauss,zampini2024petscml} for PINNs. \todo{neural Galerkin things} 
+One approach is to use matrix-free methods to approximately compute Gauß-Newton update directions by introducing an inner optimization loop that, see~\cite{schraudolph2002fast,martens2010deep} for supervised learning problems and~\cite{zeng2022competitive,bonfanti2024challenges, jnini2024gauss,zampini2024petscml} for PINNs. 
 Where our approach solves a Kronecker-factored approximation of the original linear system exactly, matrix-free approaches solve the exact system approximately typically via a second optimization loop, and we regard them as two alternative, competing approaches. %\todo{can we argue that matrix-free is slow?}
 %This approach is a competing approach to an approximation by introducing an inner optimization loop can be seen as orthogonal to our 
+
+Further, the preconditioner matrices for which we propose a KFAC approximation appear in the neural Galerkin schemes introduced by~\cite{bruna2024neural}. 
 
 Our approach builds on the literature on Kronecker-factored approximate curvature (KFAC), which was initially introduced by~\citet{heskes2000natural, martens2010deep} as an approximation of the per-layer Fisher-information matrix to reduce the computational cost of natural gradient descent. %accelerate the computation of the natural gradient direction. 
 Later, Kronecker-factored approximations were extended to other architectures including convolutional and recurrent networks~\citep{grosse2016kroneckerfactored, martens2018kroneckerfactored}, transformers~\citep{zhang2019algorithmic, pauloski2021kaisa, osawa2023pipefisher, grosse2023studying}. %, and to general weight-sharing architectures~\citep{eschenhagen2023kroneckerfactored}. 
