--- a/paper/main.tex
+++ b/paper/main.tex
@@ -65,7 +65,7 @@ PINNs}\label{sec:kfac_pinns}
 
 \input{sections/experiments.tex}
 
-\section{Discussion and Conclusion}
+\section{Discussion and Conclusion}\label{sec:conclusion}
 \input{sections/conclusion.tex}
 
 \input{sections/acknowledgements.tex}
